--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 body{
     font-family: 'poppins', sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
 *{
     padding: 0;
     margin: 0;
@@ -24,6 +27,30 @@ header{
     max-width:1152px;
     padding:0 15px;
     margin:0 auto;
+}
+
+@media (min-width: 576px){
+    .container {
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .container {
+        max-width: 720px;
+    }
+}
+
+@media (min-width: 1050px) {
+    .container {
+        max-width: 1024px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .container {
+        max-width: 1152px;
+    }
 }
 
 header nav .left a{
@@ -45,7 +72,7 @@ header nav .branding{
     margin-right:3rem;
 }
 header nav .branding img{
-    max-width: 60px;
+    max-width: 140px;
     margin-top: 0%;
     border-color: var(--dark);
 }
@@ -255,4 +282,312 @@ section.reviews .dots li.slick-active button{
     width:20px;
     height: 6px;
     
+}
+section.work{
+    background: var(--light);
+}
+section.work .card-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 2rem;
+}
+section.work .card-wrapper .card{
+    position: relative;
+    height: 250px;
+}
+section.work .card-wrapper .card .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba( 61, 207, 211, 0.9);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: var(--light);
+    opacity: 0;
+    transition: all .3s ease;
+}
+section.work .card-wrapper .card:hover .overlay{
+    opacity: 1;
+
+}
+section.work .card-wrapper .card .overlay a{
+    color: var(--secondary);
+    text-decoration: none;
+}
+section.work .card-wrapper .card img{
+    height: 100%;
+}
+section.blog{
+    background: var(--dark);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 78% 90%, 0 100%);
+    padding-bottom: 12rem;
+}
+section.blog .section-heading{
+    color: var(--pure);
+}
+section.blog .card-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 3rem;
+}
+section.blog .card-wrapper .card{
+    background: var(--pure);
+}
+section.blog .card-wrapper .card .img-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+section.blog .card-wrapper .card .card-content{
+    padding: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+section.blog .card-wrapper .card .card-content h1{
+    font-size:1rem;
+    font-weight: 600;
+}
+section.blog .card-wrapper .card .card-content a{
+    color:var(--secondary);
+    text-decoration: none;
+
+}
+section.blog .card-wrapper .card .card-content a:hover{
+    color: var(--primary);
+}
+section.blog .card-wrapper .card .card-content span{
+    color: var(--light);
+    font-size: 0.8rem;
+}
+section.blog .card-wrapper .card .card-content p{
+    font-family: 'lato', sans-serif;
+    color:var(--ternary);
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+
+}
+section.blog .card-wrapper .card .card-content a.read-more{
+    font-size: 0.8rem;
+}
+section.contact .card-wrapper{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 3rem;
+
+}
+section.contact .card-wrapper .card{
+    text-align: center;
+
+}
+section.contact .card-wrapper .card img{
+    margin-bottom: 2rem;
+    width: 30%;
+    height: 30%;
+}
+section.contact .card-wrapper .card h1{
+    font-weight: 400;
+    margin-bottom: 1rem;
+
+}
+section.contact .card-wrapper .card h6{
+    font-size: 1rem;
+    color: var(--ternary);
+    font-weight: 400;
+    margin-bottom: 2rem;
+}
+section.contact .input-wrap{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+    margin-bottom: 1rem;
+}
+section.contact .input-wrap-2{
+    display: flex;
+    flex-direction: column;
+}
+section.contact .input-wrap-2 input{
+    margin-bottom: 1rem;
+    border:1px solid var(--light);
+    font-size: 0.9rem;
+}
+section.contact input{
+    padding: 0.5rem;
+}
+section.contact .input-wrap-2 input textarea{
+    padding: 0.5rem;
+    border:1px solid var(--light);
+    font-size: 0.9rem;
+}
+section.contact .input-wrap-2 input textarea:focus{
+    outline: none;
+}
+section.contact input:focus{
+    outline: none;
+}
+section.contact .btn-wrapper{
+    text-align: center;
+    margin-top: 2rem;
+}
+footer{
+    background: var(--dark);
+    text-align: center;
+    padding: 3rem, 0;
+}
+footer .footer-logo{
+    margin-bottom: 3rem;
+    height: 50px;
+    width: 5opx;
+}
+footer .footer-social a{
+    margin-right: 1rem;
+    text-align: center;
+    
+}
+footer .copyright{
+    color:var(--ternary);
+}
+footer .footer-social{
+    margin-bottom: 2rem;
+    margin-left: -1rem;
+    height: 30px;
+    width: 30px;
+}
+
+
+.site-main-wrapper{
+    position: relative;
+}
+.hamberger{
+    position: absolute;
+    top: 40px;
+    right: 40px;
+    z-index: 11;
+    background: none;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+.hamberger img{
+    width: 30px;
+}
+.mobile-nav{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    background: var(--light);
+    width: 100%;
+    height: 100%;
+    padding: 2rem;
+    padding-top: 5rem;
+    transform: translateX(-100%);
+    transition:all .5s ease-in-out;
+}
+.open{
+    transform: translateX(0);
+}
+.times{
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    border: none;
+    background: none;
+    outline: none;
+    cursor: pointer;
+    
+}
+.times img{
+    width: 30px;
+}
+
+.mobile-nav ul{
+    list-style-type: none;
+
+}
+.mobile-nav li a{
+    color: var(--secondary);
+    text-decoration: none;
+    font-size: 2rem;
+
+}
+
+@media (max-width:1130px){
+    .branding{
+        max-width: 120px;
+    }
+    .hero{
+    header #main-nav{
+        display:none;
+    }
+    .hero .left img{
+        width: 260px;
+        height: 256px;
+        padding-top: 10%;
+
+    }
+    .hero .right h1{
+        font-size: 2.5rem;
+    }
+    .hero{
+        padding-top: 8rem;
+    }
+    header{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 22% 85%, 0 100%);
+    }
+    section.about .about-me-img {
+        height: 360px;
+    }
+    section.services .card-wrapper {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    section.work .card-wrapper {
+        grid-template-columns: repeat(2,1fr);
+    }
+    section.blog .card-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+        margin: auto;
+    }
+    section.blog {
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 25% 95%, 0 100%);
+    }
+
+}
+
+@media (max-width:576px){
+    .branding{
+        max-width: 120px;
+    }
+    .hero{
+        flex-direction: column;
+    }
+    .hero .left{
+        margin-top: -6rem;
+        margin-right: -1rem;
+        padding-bottom: 18rem;
+    }
+    .hero .right{
+        position: absolute;
+        top: 330px;
+        margin-left: -0.3rem;
+        padding:0 1rem;
+    }
+    .hero .right h1{
+        font-size: 1.82rem;
+    }
+    .hero .right h6{
+        font-size: 1.3rem;
+    }
+    .hero .right p{
+        font-size: 0.75rem;
+        margin-top: -1rem;
+        margin-bottom: 1rem;
+    }
+    header{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 80% 93%, 0 100%);
+    }
 }
