--- a/css/utilities.css
+++ b/css/utilities.css
@@ -8,7 +8,8 @@
     align-items: center;
 }
 .btn{
-    padding: 0.8rem 3rem;
+    margin-top: -0.5rem;
+    padding: 0.5rem 3rem;
     font-size: 1rem;
     font-weight: 600;
     border: 2px solid transparent;
