--- a/css/style.css
+++ b/css/style.css
@@ -509,12 +509,6 @@ footer .copyright{
 }
 
 @media (max-width:1130px){
-<<<<<<< HEAD
-=======
-    .branding{
-        max-width: 120px;
-    }
->>>>>>> 3a24484a88a07ea500e14bd87305a54bfa40845a
     header #main-nav{
         display:none;
     }
@@ -569,7 +563,7 @@ footer .copyright{
         top: 330px;
         margin-left: -0.3rem;
         padding:0 1rem;
-        background: linear-gradient(rgba(0,0,0,9), rgba(0,0,0,0.9));
+        background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9));
     }
     .hero .right h1{
         font-size: 1.82rem;
@@ -584,5 +578,67 @@ footer .copyright{
     }
     header{
         clip-path: polygon(0 0, 100% 0, 100% 100%, 80% 93%, 0 100%);
+    }
+    .about-inner-wrap{
+        flex-direction: column;
+    }
+    .about .left{
+        text-align: center;
+        margin-top: -2rem;
+        margin-bottom: 2rem;
+    }
+    .about .right{
+        text-align: center;
+    }
+    .about .right .social{
+        justify-content: center;
+    }
+    section{
+        margin-bottom: -3rem;
+    }
+    section.services .card-wrapper{
+        grid-template-columns: repeat(1, 1fr);
+    }
+    section.freelancer{
+        height: 280px;
+    }
+    section.freelancer h1{
+        margin-top: -3rem;
+    }
+    section.reviews p{
+        margin-bottom: 2rem;
+    }
+    section.reviews .slider .slide{
+        padding:0 0;
+    }
+    section.work p{
+    margin-bottom: 2rem;
+    }
+    section.work .card-wrapper {
+        grid-template-columns: repeat(1,1fr);
+    }
+    .section-heading {
+        margin-top: -2rem;
+    }
+    section.blog{
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 35% 97%, 0 100%);
+    height: 109rem;
+    }
+    section.blog p{
+    margin-bottom: 2rem;
+    }
+    section.contact{
+        margin-top: 2rem;
+    }
+    section.contact p{
+        margin-bottom: 2rem;
+    }
+    section.contact .card-wrapper {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 0rem;
+    }
+    section.contact .input-wrap {
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 1rem;
     }
 }
