--- a/css/style.css
+++ b/css/style.css
@@ -513,7 +513,7 @@ footer .copyright{
         display:none;
     }
     header .branding{
-        max-width: 120px;
+        display: block;
     }
     .hero .left img{
         width: 260px;
@@ -550,6 +550,9 @@ footer .copyright{
 }
 
 @media (max-width:576px){
+    header .branding{
+        display: block;
+    }
     .hero{
         flex-direction: column;
     }
@@ -563,7 +566,6 @@ footer .copyright{
         top: 330px;
         margin-left: -0.3rem;
         padding:0 1rem;
-        background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.9));
     }
     .hero .right h1{
         font-size: 1.82rem;
